--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-ace": "^12.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
